--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "caceres.joselyn@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
