--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "node_crud",
+    "database": "node_registro",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
