--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
